# starter-python

./: README.md  makefile  pyproject.toml
cli/: __init__.py
jupyter/: pyproject.toml
packaging_tutorial/: README.md  pyproject.toml
test_project/: main.py  makefile  pyproject.toml
test_project/cli/: __init__.py
