[tool.poetry]
name = "starter-python"
version = "0.1.0"
description = ""
authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.0"
mamba = "^0.11.2"
vyper-config = "^1.1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
