[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "example_package_vicenteherrera"
version = "0.0.1"
authors = [
  { name="Vicente Herrera", email="vicenteherrera@vicenteherrera.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vicenteherrera/starter-python/packaging_tutorial"
Issues   = "https://github.com/vicenteherrera/starter-python/issues"